force-app/main/default/objects/Governance_Eval_Event__e/Governance_Eval_Event__e.object-meta.xml
<CustomObject>
    <description>Published when governance rules need evaluation on a forecast override action.</description>
    <label>Governance Eval Event</label>
    <pluralLabel>Governance Eval Events</pluralLabel>
</CustomObject>