force-app/main/default/objects/Governance_Eval_Event__e/fields/Compensation_Context__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Context__c</fullName>
    <description>JSON: attainment, tier, threshold, payout delta</description>
    <label>Compensation Context</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>