force-app/main/default/objects/Governance_Eval_Event__e/fields/Override_Id__c.field-meta.xml
<CustomField>
    <fullName>Override_Id__c</fullName>
    <description>Forecast Override ID</description>
    <label>Forecast Override ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>