force-app/main/default/objects/Governance_Eval_Event__e/fields/Participant_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Id__c</fullName>
    <description>Participant ID</description>
    <label>Participant ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>