force-app/main/default/objects/Governance_Eval_Event__e/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <description>Rule ID</description>
    <label>Rule ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>